# obsidian-mcp

./: .env.example  .gitignore  README.en.md  README.md  main.py  pyproject.toml
plugin-src/: esbuild.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
plugin-src/src/: main.ts
src/mcp_obsidian/: client.py  install.py  server.py
src/mcp_obsidian/plugin_dist/: main.js  manifest.json
