[project]
name = "mcp-obsidian"
version = "0.1.0"
description = "Self-contained MCP server for Obsidian (includes a bundled bridge plugin)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Valen-akm", email = "valntinakm@gmail.com" },
]
keywords = ["mcp", "obsidian", "llm", "claude"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.1",
]

[project.scripts]
mcp-obsidian = "mcp_obsidian.server:main"
mcp-obsidian-install = "mcp_obsidian.install:main"

[project.urls]
Homepage = "https://github.com/Valen-akm/obsidian-mcp"
Repository = "https://github.com/Valen-akm/obsidian-mcp"
Issues = "https://github.com/Valen-akm/obsidian-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obsidian"]
